--- a/map.html
+++ b/map.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <title>Home</title>
+    <title>Regional</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
     <!--CSS-->
@@ -17,18 +17,36 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
-                    Dropdown link
+                    Explore
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="index.html">Home</a>
-                    <a class="dropdown-item" href="map.html">Regional</a>
-                    <a class="dropdown-item" href="#">Search</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="map.html">Regional Inspiration</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Search Recipes</a>
                 </div>
             </li>
         </ul>
     </nav>
 
 
+    <div class="container mt-5">
+        <!--Clickable Map-->
+        <div class="jumbotron jumbotron-fluid">
+            <!--jumbotron-->
+            <div id="jumbotron" class="text-center text-primary">
+                <h1>Bring Your Own Diet</h1>
+            </div>
+            <div class="container text-center" id="map">
+                <div id="vmap" style="width: auto; height: 500px;"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mt-5" id="recipeSpace">
+
+    </div>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -38,6 +56,15 @@
     <!-- Bootstrap Js Link Needed -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <!--Firebase-->
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+    <!--Map Links -->
+    <link href="assets/css/jqvmap.css" media="screen" rel="stylesheet" type="text/css">
+    <script src="assets/javascript/jquery.vmap.js"></script>
+    <script src="assets/javascript/jquery.vmap.usa.js"></script>
+
+    <!--App.js-->
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
 </html>
