skeleton for search.html

--- a/search.html
+++ b/search.html
@@ -1,1 +1,11 @@
 <!-- Form Page Where Users May Search Recipes By Different Parameters -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>Search Page</title>
+</head>
+<body>
+    
+</body>
+</html>
