--- a/map.html
+++ b/map.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="assets/css/jqvmap.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="assets/css/jqvmap.min.css">
 </head>
 
 <body>
@@ -59,7 +61,6 @@
     <!--Firebase-->
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
     <!--Map Links -->
-    <link href="assets/css/jqvmap.css" media="screen" rel="stylesheet" type="text/css">
     <script src="assets/javascript/jquery.vmap.js"></script>
     <script src="assets/javascript/jquery.vmap.usa.js"></script>
 
