--- a/map.html
+++ b/map.html
@@ -5,6 +5,8 @@
     <title>Regional</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
+    <!-- JQVMap -->
+    <link href="assets/css/jqvmap.css" media="screen" rel="stylesheet" type="text/css">
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -58,8 +60,8 @@
         crossorigin="anonymous"></script>
     <!--Firebase-->
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
-    <!--Map Links -->
-    <link href="assets/css/jqvmap.css" media="screen" rel="stylesheet" type="text/css">
+
+    <!--JQVMap Links -->
     <script src="assets/javascript/jquery.vmap.js"></script>
     <script src="assets/javascript/jquery.vmap.usa.js"></script>
 
