added in text and some styles for the splash page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
         </ul>
     </nav>
 
+    <main id="splash-page" class="position-relative">
+        <div class="row position-absolute w-100 text-center mx-auto my-0">
+            <div class="col">
+                <h1 id="splash-title">Bring Your Own Diet</h1>
 
+                <p id="splash-subtitle">Recipe Inspirations for All Types of Food Lovers</p>
+            </div>
+        </div>
+    </main>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
