--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en-us">
 
 <head>
+    <meta charset="utf-8">
     <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
     <!--CSS-->
@@ -34,6 +37,8 @@
                 <h1 id="splash-title">Bring Your Own Diet</h1>
 
                 <p id="splash-subtitle">Recipe Inspirations for All Types of Food Lovers</p>
+
+                <h2 id="splash-time"></h2>
             </div>
         </div>
     </main>
@@ -46,6 +51,13 @@
     <!-- Bootstrap Js Link Needed -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <!--JQVMap Links -->
+    <script src="assets/javascript/jquery.vmap.js"></script>
+    <script src="assets/javascript/jquery.vmap.usa.js"></script>
+    <!-- Moment.js for timer -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <!-- Custom JS -->
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
