--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="index.html">Home</a>
                     <a class="dropdown-item" href="map.html">Regional</a>
-                    <a class="dropdown-item" href="#">Search</a>
+                    <a class="dropdown-item" href="search.html">Search</a>
                 </div>
             </li>
         </ul>
