--- a/search.html
+++ b/search.html
@@ -41,13 +41,13 @@
     <div class="container mt-5">
         <form>
             <div class="form-group">
-                <label for="exampleFormControlInput1">Ingredient</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="i.e.chicken,beef,fish,etc">
+                <label for="ingredient">Ingredient</label>
+                <input type="text" class="form-control" id="ingredient" placeholder="i.e.chicken,beef,fish,etc">
             </div>
 
             <div class="form-group">
-                <label for="exampleFormControlSelect1">Quantity of Recipes</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <label for="quantity">Quantity of Recipes</label>
+                <select class="form-control" id="quantity">
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -61,8 +61,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="exampleFormControlSelect2">Dietary Restrictions (Optional)</label>
-                <select class="form-control" id="exampleFormControlSelect2">
+                <label for="diet">Dietary Restrictions (Optional)</label>
+                <select class="form-control" id="diet">
                     <option>Choose</option>
                     <option>Balanced</option>
                     <option>High Fiber</option>
@@ -73,8 +73,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="exampleFormControlSelect3">Type of Recipes (Optional)</label>
-                <select class="form-control" id="exampleFormControlSelect3">
+                <label for="type">Type of Recipes (Optional)</label>
+                <select class="form-control" id="type">
                     <option>Choose</option>
                     <option>Vegan</option>
                     <option>Vegetarian</option>
