--- a/map.html
+++ b/map.html
@@ -6,11 +6,9 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
     <!-- JQVMap -->
-    <link href="assets/css/jqvmap.css" media="screen" rel="stylesheet" type="text/css">
+    <link href="assets/css/jqvmap.min.css" media="screen" rel="stylesheet" type="text/css">
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="assets/css/jqvmap.css" media="screen" rel="stylesheet" type="text/css">
-    <link href="assets/css/jqvmap.min.css">
 </head>
 
 <body>
@@ -28,22 +26,22 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="map.html">Regional Inspiration</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Search Recipes</a>
+                    <a class="dropdown-item" href="search.html">Search Recipes</a>
                 </div>
             </li>
         </ul>
     </nav>
 
 
-    <div class="container mt-5">
+    <div class="container mt-5" id="regional-page">
         <!--Clickable Map-->
         <div class="jumbotron jumbotron-fluid">
             <!--jumbotron-->
-            <div id="jumbotron" class="text-center text-primary">
+            <div id="jumbotron" class="text-center text-primary mt-0">
                 <h1>Bring Your Own Diet</h1>
             </div>
             <div class="container text-center" id="map">
-                <div id="vmap" style="width: auto; height: 500px;"></div>
+                <div id="vmap"></div>
             </div>
         </div>
     </div>
