added meta tags for charset and viewport for Regional page

--- a/map.html
+++ b/map.html
@@ -2,7 +2,10 @@
 <html lang="en-us">
 
 <head>
+    <meta charset="utf-8">
     <title>Regional</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
     <!-- JQVMap -->
