--- a/search.html
+++ b/search.html
@@ -15,16 +15,19 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-        <a class="navbar-brand" href="#"> <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg"
-                width="30" height="30" class="d-inline-block align-top" alt=""></a>
+        <a class="navbar-brand" href="#"> 
+            <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg" class="d-inline-block align-top" alt="">
+        </a>
+
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
-                    Dropdown link
+                    Explore
                 </a>
+
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="home.html">Home</a>
+                    <a class="dropdown-item" href="index.html">Home</a>
                     <a class="dropdown-item" href="map.html">Regional Inspirations</a>
                     <a class="dropdown-item" href="search.html">Search</a>
                 </div>
