added in classes for different meal times

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg" class="d-inline-block align-top" alt="">
         </a>
@@ -35,14 +35,18 @@
     </nav>
 
     <main id="splash-page" class="position-relative">
-        <div class="row position-absolute w-100 text-center mx-auto my-0">
-            <div class="col">
+        <div class="row position-absolute w-100 text-center mx-auto">
+            <div class="col-1 col-lg-3"></div>
+
+            <div class="col p-2" id="splash-box">
                 <h1 id="splash-title">Bring Your Own Diet</h1>
 
                 <p id="splash-subtitle">Recipe Inspirations for All Types of Food Lovers</p>
 
                 <h2 id="splash-time"></h2>
             </div>
+
+            <div class="col-1 col-lg-3"></div>
         </div>
     </main>
 
