added in Firebase UI login and arrays for diet restrictions and regions

--- a/search.html
+++ b/search.html
@@ -9,6 +9,8 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
+    <!-- Firebase UI -->
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css">
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -34,6 +36,9 @@
             </li>
         </ul>
     </nav>
+
+    <!-- Firebase UI for sign-in -->
+    <div id="firebaseui-auth-container"></div>
 
     <!--jumbotron-->
     <div class="container mt-5">
@@ -99,8 +104,9 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <!--Firebase-->
+    <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
     <!--App.js-->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
 
