--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
+    <!-- Firebase UI -->
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css">
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -34,6 +36,7 @@
         </ul>
     </nav>
 
+    <!-- Splash page contents-->
     <main id="splash-page" class="position-relative">
         <div class="row position-absolute w-100 text-center mx-auto">
             <div class="col-1 col-lg-3"></div>
@@ -48,6 +51,9 @@
 
             <div class="col-1 col-lg-3"></div>
         </div>
+
+        <!-- Firebase UI for sign-in -->
+        <div id="firebaseui-auth-container"></div>
     </main>
 
     <!-- jQuery library -->
@@ -58,6 +64,9 @@
     <!-- Bootstrap Js Link Needed -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
     <!--JQVMap Links -->
     <script src="assets/javascript/jquery.vmap.js"></script>
     <script src="assets/javascript/jquery.vmap.usa.js"></script>
