--- a/map.html
+++ b/map.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
     <!-- JQVMap -->
     <link href="assets/css/jqvmap.min.css" media="screen" rel="stylesheet" type="text/css">
+    <!-- Firebase UI -->
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css">
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -35,6 +37,8 @@
         </ul>
     </nav>
 
+    <!-- Firebase UI for sign-in -->
+    <div id="firebaseui-auth-container"></div>
 
     <div class="container mt-5" id="regional-page">
         <!--Clickable Map-->
@@ -61,8 +65,9 @@
     <!-- Bootstrap Js Link Needed -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <!--Firebase-->
+    <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
     <!--Map Links -->
     <script src="assets/javascript/jquery.vmap.js"></script>
     <script src="assets/javascript/jquery.vmap.usa.js"></script>
