--- a/map.html
+++ b/map.html
@@ -10,13 +10,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
     <!-- JQVMap -->
     <link href="assets/css/jqvmap.min.css" media="screen" rel="stylesheet" type="text/css">
-<<<<<<< HEAD
     <!-- Firebase UI -->
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css">
-=======
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
->>>>>>> master
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -85,32 +82,32 @@
     </div>
 
     <div class="container mt-5" id="recipeSpace">
+        <div class="card">
+            <div class="card-header">
+                <i class="fas fa-info-circle"></i> Recipe Details
+            </div>
 
-    </div>
+            <div class="card-body" id="recipeIns">
+                <h3>Recipe Name</h3>
 
-    <div class="modal" tabindex="-1" role="dialog" id="testModal">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modal-title">Modal title</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <img id="modal-recipe-img" src="" alt="">
-                        <p id="modal-recipe-description"></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
+                <hr class="my-4">
+
+                <img alt="recipe picture" src="assets/images/basic-ingredients.jpg">
+
+                <p>Servings: <span id="servings">0</span></p>
+
+                <p><strong>Ingredients:</strong></p>
+
+                <div id="recipeIngredients"></div>
+
+                <p id="recipeCtg">This recipe is <span id="categories"></span>.</p>
+
+                <p>For more information <a href="#"><i class="fas fa-external-link-alt"></i></a></p>
+
+                <button type="button" class="btn btn-outline-dark" id="closeRecipe">Close</button>
             </div>
         </div>
-
-
-
-
+    </div>
   
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
