--- a/map.html
+++ b/map.html
@@ -18,28 +18,22 @@
 
 <body>
 
-
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"> <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg"
-                class="d-inline-block align-top" alt=""></a>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Explore
-                </a>
-
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="index.html">Home</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="map.html">Regional Inspiration</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="search.html">Search Recipes</a>
-                </div>
-            </li>
-        </ul>
-    </nav>
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="index.html">
+                <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg" class="d-inline-block align-top" alt="">
+            </a>
+                <ul class="nav nav-pills ml-auto">
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="map.html">Regional Inspirations</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="search.html">Search Recipes</a>
+                    </li>
+                </ul>
+        </nav>
 
     <!-- Modal -->
     <div class="modal fade" id="modalCenter" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle"
