--- a/map.html
+++ b/map.html
@@ -51,8 +51,14 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body" id="modalBody">
-                
+                <ul class ="navbar nav-tabs nav-justified" id="tabContent">
+                    <li class="active"><a href="tab1" data-toggle="tab">Cook It Yourself</a></li>
+                        <li><a href="tab2" data-toggle="tab">Go Out to Eat</a></li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="modal body">
+
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
