updated the ids for the accordion to be more semantic

--- a/map.html
+++ b/map.html
@@ -96,25 +96,23 @@
 
                 <p>Servings: <span id="servings">0</span></p>
 
-
-
-                <div class="accordion" id="accordionExample">
+                <div class="accordion" id="nutritionInfo">
                     <div class="card">
-                        <div class="card-header" id="headingOne">
+                        <div class="card-header" id="nutritionalValueHeading">
                             <h5 class="mb-0">
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                                    aria-expanded="true" aria-controls="collapseOne">
+                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#nutritionalValue"
+                                    aria-expanded="true" aria-controls="nutritionalValue">
                                     Nutritional Value
                                 </button>
                             </h5>
                         </div>
 
-                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                        <div id="nutritionalValue" class="collapse show" aria-labelledby="nutritionalValueHeading" data-parent="#nutritionInfo">
                             <div class="card-body">
                                 <ul>
                                     <li>Calories: <span id='calories'>0</span></li>
-                                    <li>Fat: <span id='fat'>0 g</span>g</li>
-                                    <li>Sodium: <span id='sodium'>0</span>g</li>
+                                    <li>Fat: <span id='fat'>0</span>g</li>
+                                    <li>Sodium: <span id='sodium'>0</span>mg</li>
                                     <li>Sugar: <span id='sugar'>0</span>g</li>
                                     <li>Protein: <span id='protein'>0</span>g</li>
                                 </ul>
