--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <!-- Animate -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
     <!-- Firebase UI -->
@@ -16,24 +17,9 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg" class="d-inline-block align-top" alt="">
+        <a href="index.html">
+            <img src="assets/images/byod.png" class="d-inline-block align-top" alt="BYOD Logo Food Stand" id="logo">
         </a>
-
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Explore
-                </a>
-
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="index.html">Home</a>
-                    <a class="dropdown-item" href="map.html">Regional</a>
-                    <a class="dropdown-item" href="search.html">Search</a>
-                </div>
-            </li>
-        </ul>
     </nav>
 
     <!-- Splash page contents-->
@@ -42,11 +28,13 @@
             <div class="col-1 col-lg-3"></div>
 
             <div class="col p-2" id="splash-box">
-                <h1 id="splash-title">Bring Your Own Diet</h1>
+                <h1 id="splash-title" class="animated zoomInDown delay-1s">Bring Your Own Diet</h1>
 
-                <p id="splash-subtitle">Recipe Inspirations for All Types of Food Lovers</p>
+                <p id="splash-subtitle" class="animated fadeInLeft">Recipe Inspirations for All Types of Food Lovers</p>
 
-                <h2 id="splash-time"></h2>
+                <h2 id="splash-time" class="animated fadeInRight"></h2>
+                <a href="map.html"><button type="button" class="btn btn-outline-dark">Map</button></a>
+                <a href="search.html"><button type="button" class="btn btn-outline-dark">Search</button></a>
             </div>
 
             <div class="col-1 col-lg-3"></div>
