--- a/search.html
+++ b/search.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8" />
     <title>Search Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <!-- Animate -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
     <!-- Firebase UI -->
@@ -17,24 +18,9 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"> 
-            <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg" class="d-inline-block align-top" alt="">
+        <a href="index.html"> 
+            <img src="assets/images/byod.png" class="d-inline-block align-top" alt="BYOD Logo Food Stand" id="logo">
         </a>
-
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Explore
-                </a>
-
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="index.html">Home</a>
-                    <a class="dropdown-item" href="map.html">Regional Inspirations</a>
-                    <a class="dropdown-item" href="search.html">Search</a>
-                </div>
-            </li>
-        </ul>
     </nav>
 
     <!-- Firebase UI for sign-in -->
@@ -44,7 +30,7 @@
     <div class="container mt-5">
         <div class="jumbotron jumbotron-fluid">
             <div id="jumbotron" class="text-center text-primary">
-                <h1>Search</h1>
+                <h1 class="animated flipInY">Search</h1>
             </div>
         </div>
     </div>
