fixed nutrition menu and minor errors

--- a/map.html
+++ b/map.html
@@ -98,7 +98,7 @@
 
 
 
-                <div class="accordion" id="accordionExample">
+                <div class="nutrition">
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h5 class="mb-0">
@@ -113,7 +113,7 @@
                             <div class="card-body">
                                 <ul>
                                     <li>Calories: <span id='calories'>0</span></li>
-                                    <li>Fat: <span id='fat'>0 g</span>g</li>
+                                    <li>Fat: <span id='fat'>0</span>g</li>
                                     <li>Sodium: <span id='sodium'>0</span>g</li>
                                     <li>Sugar: <span id='sugar'>0</span>g</li>
                                     <li>Protein: <span id='protein'>0</span>g</li>
