changed Firebase login to be a modal

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <!-- Firebase UI for sign-in -->
-        <div id="firebaseui-auth-container"></div>
+        <div id="firebaseui-auth-container" class="modal" role="login"></div>
     </main>
 
     <!-- jQuery library -->
