--- a/map.html
+++ b/map.html
@@ -30,7 +30,7 @@
     </nav>
 
     <!-- Firebase UI for sign-in -->
-    <div id="firebaseui-auth-container"></div>
+    <div id="firebaseui-auth-container" class="modal" role="login"></div>
 
     <!-- Modal -->
     <div class="modal fade" id="modalCenter" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle" aria-hidden="true">
