added in user account creation and getting favorites

--- a/index.html
+++ b/index.html
@@ -43,20 +43,22 @@
         <div class="row position-absolute w-100 p-3" id="favorites-page">
             <div class="col-9">
                 <h2 class="text-center">Favorite Recipes</h2>
-
-                <div class="row p-2" id="favorite-recipes">
-                    <p class="text-center">No favorite recipes yet</p>
-                </div>
+                
+                <p class="text-center" id="favorites-none">No favorite recipes yet</p>
+                
+                <div class="row p-2" id="favorite-recipes"></div>
             </div>
 
             <div class="col-3">
                 <h2 class="text-center">Favorite Places by State</h2>
 
-                <div class="accordion" id="favorite-places">
+                <p id="region-none">No favorite places yet.</p>
+                <ul id="favorite-places"></ul>
+                <!-- <div class="accordion" id="favorite-places">
                     <div class="card">
                         <div class="card-header" id="region-none">No favorite places yet</div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
