--- a/map.html
+++ b/map.html
@@ -116,6 +116,14 @@
 
                 <p>For more information <a href="#"><i class="fas fa-external-link-alt"></i></a></p>
 
+                <button class="btn" id="recipeAdd">
+                    <i class="far fa-star"></i> Add to Favorite Recipes
+                </button>
+
+                <button class="btn" id="recipeRemove">
+                    <i class="fas fa-star"></i> Remove from Favorite Recipes
+                </button>
+
                 <button type="button" class="btn btn-outline-dark" id="closeRecipe">Close</button>
             </div>
 
