added 2nd restaurant api and functionality, fixed up search page

--- a/map.html
+++ b/map.html
@@ -24,7 +24,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a href="index.html"> 
+        <a href="index.html">
             <img src="assets/images/byod.png" class="d-inline-block align-top" alt="BYOD Logo Food Stand" id="logo">
         </a>
     </nav>
@@ -70,7 +70,7 @@
     <div class="container mt-5" id="recipeSpace">
         <div class="card">
             <div class="card-header">
-                <i class="fas fa-info-circle"></i> Recipe Details
+                <i class="fas fa-info-circle"></i> Details
             </div>
 
             <div class="card-body" id="recipeIns">
@@ -93,7 +93,8 @@
                             </h5>
                         </div>
 
-                        <div id="nutritionalValue" class="collapse show" aria-labelledby="nutritionalValueHeading" data-parent="#nutritionInfo">
+                        <div id="nutritionalValue" class="collapse show" aria-labelledby="nutritionalValueHeading"
+                            data-parent="#nutritionInfo">
                             <div class="card-body">
                                 <ul>
                                     <li>Calories: <span id='calories'>0</span></li>
@@ -108,36 +109,37 @@
                     </div>
                 </div>
 
-                    <p><strong>Ingredients:</strong></p>
+                <p><strong>Ingredients:</strong></p>
 
-                    <div id="recipeIngredients"></div>
+                <div id="recipeIngredients"></div>
 
-                    <p id="recipeCtg">This recipe is <span id="categories"></span>.</p>
+                <p id="recipeCtg">This recipe is <span id="categories"></span>.</p>
 
-                    <p>For more information <a href="#"><i class="fas fa-external-link-alt"></i></a></p>
+                <p>For more information <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i></a></p>
 
-                    <button type="button" class="btn btn-outline-dark" id="closeRecipe">Close</button>
-                
+                <button type="button" class="btn btn-outline-dark" id="closeRecipe">Close</button>
+
             </div>
         </div>
+    </div>
 
-        <!-- jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <!-- Popper.js Link Needed for Bootstrap -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-        <!-- Bootstrap Js Link Needed -->
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
-        <!-- Firebase -->
-        <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
-        <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
-        <!--Map Links -->
-        <script src="assets/javascript/jquery.vmap.js"></script>
-        <script src="assets/javascript/jquery.vmap.usa.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Popper.js Link Needed for Bootstrap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <!-- Bootstrap Js Link Needed -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
+    <!--Map Links -->
+    <script src="assets/javascript/jquery.vmap.js"></script>
+    <script src="assets/javascript/jquery.vmap.usa.js"></script>
 
-        <!--App.js-->
-        <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <!--App.js-->
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
 </html>
