--- a/search.html
+++ b/search.html
@@ -4,14 +4,19 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Search Page</title>
+    <title>Search</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Animate -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/lux/bootstrap.min.css">
+    <!-- JQVMap -->
+    <link href="assets/css/jqvmap.min.css" media="screen" rel="stylesheet" type="text/css">
     <!-- Firebase UI -->
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -19,13 +24,33 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a href="index.html"> 
+        <a href="index.html">
             <img src="assets/images/byod.png" class="d-inline-block align-top" alt="BYOD Logo Food Stand" id="logo">
         </a>
     </nav>
 
     <!-- Firebase UI for sign-in -->
     <div id="firebaseui-auth-container"></div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="searchModalCenter" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="searchModalTitle">Search Results</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="searchBody">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!--jumbotron-->
     <div class="container mt-5">
@@ -39,64 +64,111 @@
     <div class="container mt-5 text-dark">
         <form>
             <div class="form-group">
-                <label for="ingredient">Ingredient</label>
-                <input type="text" class="form-control" id="ingredient" placeholder="i.e.chicken,beef,fish,etc">
+                <label for="ingredient">Search Term</label>
+                <input type="text" class="form-control" id="searchIng" placeholder="Pasta" required>
             </div>
 
             <div class="form-group">
                 <label for="quantity">Quantity of Recipes</label>
-                <select class="form-control" id="quantity">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
+                <select class="form-control" id="recQ" required>
                     <option>5</option>
-                    <option>6</option>
-                    <option>7</option>
-                    <option>8</option>
-                    <option>9</option>
                     <option>10</option>
+                    <option>15</option>
+                    <option>20</option>
                 </select>
             </div>
 
-            <div class="form-group">
-                <label for="diet">Dietary Restrictions (Optional)</label>
-                <select class="form-control" id="diet">
-                    <option>Choose</option>
-                    <option>Balanced</option>
-                    <option>High Fiber</option>
-                    <option>High Protein</option>
-                    <option>Low-Carb</option>
-                    <option>Low-Fat</option>
-                    <option>Low-Sodium</option>
-                </select>
-            </div>
 
             <div class="form-group">
-                <label for="recipeQuery">Type of Recipes (Optional)</label>
-                <select class="form-control" id="recipeQuery">
+                <label for="recipeQuery">Health Restrictions (Optional)</label>
+                <select class="form-control" id="healthRest">
                     <option>Choose</option>
                     <option>Vegan</option>
                     <option>Vegetarian</option>
-                    <option>Gluten</option>
-                    <option>Dairy</option>
-                    <option>Peanuts</option>
+                    <option>Gluten Free</option>
+                    <option>Dairy Free</option>
+                    <option>Peanut Free</option>
+                    <option>Sugar Free</option>
+                    <option>Red Meat-Free</option>
                 </select>
+            </div>
+            <button type="submit" class="btn btn-outline-dark" id="searchBtn">Search</button>
         </form>
+    </div>
+
+    <div class="container mt-5" id="recipeSpace">
+        <div class="card">
+            <div class="card-header">
+                <i class="fas fa-info-circle"></i> Details
+            </div>
+
+            <div class="card-body" id="recipeIns">
+                <h3>Recipe Name</h3>
+
+                <hr class="my-4">
+
+                <img alt="recipe picture" src="assets/images/basic-ingredients.jpg">
+
+                <p>Servings: <span id="servings">0</span></p>
+
+                <div class="accordion" id="nutritionInfo">
+                    <div class="card">
+                        <div class="card-header" id="nutritionalValueHeading">
+                            <h5 class="mb-0">
+                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#nutritionalValue"
+                                    aria-expanded="true" aria-controls="nutritionalValue">
+                                    Nutritional Value
+                                </button>
+                            </h5>
+                        </div>
+
+                        <div id="nutritionalValue" class="collapse show" aria-labelledby="nutritionalValueHeading"
+                            data-parent="#nutritionInfo">
+                            <div class="card-body">
+                                <ul>
+                                    <li>Calories: <span id='calories'>0</span></li>
+                                    <li>Fat: <span id='fat'>0</span>g</li>
+                                    <li>Sodium: <span id='sodium'>0</span>mg</li>
+                                    <li>Sugar: <span id='sugar'>0</span>g</li>
+                                    <li>Protein: <span id='protein'>0</span>g</li>
+                                </ul>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <p><strong>Ingredients:</strong></p>
+
+                <div id="recipeIngredients"></div>
+
+                <p id="recipeCtg">This recipe is <span id="categories"></span>.</p>
+
+                <p>For more information <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i></a></p>
+
+                <button type="button" class="btn btn-outline-dark" id="closeRecipe">Close</button>
+
+            </div>
+        </div>
     </div>
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Popper.js Link Needed for Bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
+    <!-- Bootstrap Js Link Needed -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
+    <!--Map Links -->
+    <script src="assets/javascript/jquery.vmap.js"></script>
+    <script src="assets/javascript/jquery.vmap.usa.js"></script>
+
     <!--App.js-->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
-
 </body>
 
 </html>
